--- a/css/styles.css
+++ b/css/styles.css
@@ -31,10 +31,13 @@ body{
     font-size: larger;
 }
 #fourth{
-    margin-top: 50px;
+    margin-top: 40px;
     margin-bottom: 50px;
     color: black;
     font-size: x-large;
     font-weight: bolder;
+}
+.our,.all,.planning{
+    display: none;
 }
 
