--- a/css/styles.css
+++ b/css/styles.css
@@ -52,3 +52,36 @@ body{
     margin: 5px;
      padding: 5px;
 } 
+
+#contact{
+    background-image: url(/images/c_image.jpg);
+    padding: 40px 5px;
+  color: white;
+  max-width: 100vw
+}
+.message{
+    padding: 3px 15px;
+    margin: 7px 2px;
+    width: 700px;
+    max-width: 89%;
+  }
+  form{
+    width: 700px;
+    max-width: 90%;
+  }
+  ::placeholder{
+    color: rgb(204, 204, 204);
+  }
+  form input{
+    width:49%;
+  }
+  form input, form textarea{
+    background: transparent;
+    border: 1px solid white;
+    color: white;
+    padding: 7px;
+  }
+  form textarea{
+    margin-top: 20px;
+    width: 98.8%;
+  }
