--- a/css/styles.css
+++ b/css/styles.css
@@ -52,6 +52,13 @@ body{
     margin: 5px;
      padding: 5px;
 } 
+/* #portfolio img:hover,#portfolio2 img:hover{
+    background-color: rgb(223, 207, 207);
+} */
+
+.port1:hover{
+  background-color: rgb(238, 225, 225);
+}
 
 #contact{
     background-image: url(/images/c_image.jpg);
