--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ body{
 }
 
 #first{
-    background-image: url(/images/h_img.jpg);
+    background-image: url(../images/h_img.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -25,7 +25,7 @@ body{
 }
 
 #third{
-    background-image: url(/images/s_image.jpg);
+    background-image: url(../images/s_image.jpg);
     color: white;
     padding: 100px;
     font-size: larger;
@@ -69,7 +69,7 @@ span{
 
 
 #contact{
-    background-image: url(/images/c_image.jpg);
+    background-image: url(../images/c_image.jpg);
     padding: 40px 5px;
   color: white;
   max-width: 100vw
